--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs-kit",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "nestjs kit",
+  "author": "starkwang",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
